--- a/package.json
+++ b/package.json
@@ -18,10 +18,15 @@
   },
   "dependencies": {
     "@heroui/react": "^2.7.5",
+    "@react-three/drei": "^10.0.5",
+    "@react-three/fiber": "^9.1.0",
+    "@types/three": "^0.174.0",
+    "cannon-es": "^0.20.0",
     "framer-motion": "^12.5.0",
     "next": "15.2.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
